Continue minor refactoring