@@ -41,6 +41,7 @@ test {
                "--add-opens=java.base/java.util.function=ALL-UNNAMED",
                "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
                "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
+               "--add-opens=java.base/java.net=ALL-UNNAMED",          
                "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
     ]
 }
